sql generics + tests